--- a/grails-app/i18n/messages_cs_CZ.properties
+++ b/grails-app/i18n/messages_cs_CZ.properties
@@ -15,7 +15,7 @@ default.not.equal.message=Položka [{0}] třídy [{1}] o hodnotě [{2}] nemůže
 default.null.message=Položka [{0}] třídy [{1}] nemůže být prázdná
 default.not.unique.message=Položka [{0}] třídy [{1}] o hodnotě [{2}] musí být unikátní
 
-default.paginate.prev=Předcházející
+default.paginate.prev=Předcházející d
 default.paginate.next=Následující
 default.boolean.true=Pravda
 default.boolean.false=Nepravda
